<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We will Help You find Your Way</string>
    <string name="powered">Powered By Rahi Pateal</string>

    <!--Strings for On board screen-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make a Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit back and Enjoy</string>

    <!--Descriptions-->
    <string name="first_slide_desc">You can Search any place nearby or within the specified city. We will display all the specific and related information</string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform the calling and messaging activities</string>
    <string name="third_slide_desc">If you have a shop or something like business and wnat to be the part of our growing industry then add up your business.</string>
    <string name="fourth_slide_desc">We will Handle everything fo you if you have this app in your pocket. Dont worry and sit tight.</string>

    <!--Buttons-->
    <string name="button_skip">Skip</string>
    <string name="button_next">Next</string>
    <string name="button_lets_get_started">Lets Get Started</string>

    <!--Categories-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="bank">Bank</string>
    <string name="banks">Banks</string>
    <string name="education">Education</string>
    <string name="airports">Airports</string>

    <!--Titles and Descriptions-->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the most demand in the town.</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>

    <string name="home">Home</string>
    <string name="login">LogIn</string>
    <string name="logout">LogOut</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="all_categories">All Categories</string>
    <string name="missing_place">Add Missing Place</string>
    <string name="share">Share</string>
    <string name="rateus">Rate Us</string>

    <string name="sign_up">Sign Up</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow your business using Online Services</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How We Work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forgot Password</string>

    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter the OTP Sent on your given phone number</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset password</string>

</resources>