<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".Common.LoginSignUp.RetailerSignUpScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/black_circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_black"
            android:text="@string/retailer_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="36dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_light"
            android:text="@string/retailer_tag_line"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
             />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:layout_width="0dp"
                android:id="@+id/login_btn"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_weight="1"
                android:transitionName="transition_login_btn"
                android:onClick="callLoginScreen"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimary"
                />

            <Button
                android:layout_width="0dp"
                android:id="@+id/signup_btn"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:transitionName="transition_login_btn"
                android:background="@color/colorPrimary"
                android:onClick="callNextSignUpScreen"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_we_work"
            android:background="#00000000"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>

</ScrollView>