<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.UserDashboard"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:theme="@style/navigationTheme"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/md_white_off"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/contentView"
        android:orientation="vertical"
        android:background="@color/home_background">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <ImageView
                android:id="@+id/menuImg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:src="@drawable/menu_icon"/>
            <ImageView
                android:id="@+id/add_user"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:onClick="callRetailerScreen"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/banner_background"
                android:elevation="10dp"
                android:src="@drawable/missing_place_icon"/>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logo_name"
                        android:textSize="28dp"
                        android:fontFamily="@font/black_ops_one"
                        android:id="@+id/appname"
                        android:layout_centerHorizontal="true"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@id/appname"
                        android:background="@color/white"
                        android:layout_marginRight="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:elevation="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_text"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"/>
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/search_icon"
                            android:layout_alignParentRight="true"
                            android:layout_centerInParent="true"
                            android:layout_marginRight="15dp"/>

                    </RelativeLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card_1"
                            android:elevation="8dp"
                            android:layout_margin="10dp">
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/restaurant_icon"
                                android:layout_centerInParent="true"/>
                        </RelativeLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/restaurants"
                            android:textAlignment="center"
                            android:textSize="11dp"
                            android:gravity="center_horizontal"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card_2"
                            android:elevation="8dp"
                            android:layout_margin="10dp">
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/hotel_icon"
                                android:layout_centerInParent="true"/>
                        </RelativeLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hotels"
                            android:textAlignment="center"
                            android:textSize="11dp"
                            android:gravity="center_horizontal"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card_3"
                            android:elevation="8dp"
                            android:layout_margin="10dp">
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/education"
                                android:layout_centerInParent="true"/>
                        </RelativeLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Education"
                            android:textAlignment="center"
                            android:textSize="11dp"
                            android:gravity="center_horizontal"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card_4"
                            android:elevation="8dp"
                            android:layout_margin="10dp">
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/shops_icon"
                                android:layout_centerInParent="true"/>
                        </RelativeLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/shops"
                            android:textAlignment="center"
                            android:textSize="11dp"
                            android:gravity="center_horizontal"
                            />
                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="20dp"
                    android:background="@color/banner_background_light">
                    <LinearLayout
                        android:id="@+id/featured_background"
                        android:layout_width="170dp"
                        android:layout_height="280dp"
                        android:background="@color/banner_background"
                        android:orientation="vertical"
                        android:layout_margin="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/featured_locations"
                            android:textSize="25dp"
                            android:textColor="@color/colorAccent"
                            android:layout_marginTop="50dp"
                            android:textAllCaps="true"
                            android:layout_marginLeft="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/featured_locations_description"
                            android:layout_margin="10dp"
                            />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/featured_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/featured_background"
                        android:background="@color/home_background"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:orientation="vertical"
                    android:layout_marginTop="30dp"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/most_viewed_locations"
                            android:textSize="20dp"
                            android:textColor="@color/colorAccent"
                            android:fontFamily="@font/black_ops_one"
                            android:textAllCaps="true"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_all"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            />
                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/mostViewedRecycler"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        >

                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:orientation="vertical"
                    android:layout_marginTop="30dp"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/categories"
                            android:textSize="20dp"
                            android:textColor="@color/colorAccent"
                            android:fontFamily="@font/black_ops_one"
                            android:textAllCaps="true"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_all"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            />
                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/categoriesRecycler"
                        android:layout_marginTop="10dp">

                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>